Fix hero position on small screens

--- a/_sass/hero.scss
+++ b/_sass/hero.scss
@@ -69,7 +69,7 @@
 	background-position: center;
 	color: #fff;
 
-	@media screen and (max-height: 41rem) {
+	@media screen and (max-height: 47rem) {
 		position: relative;
 	}
 
